{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 80,
  "lineage": "b977c8a8-caea-7942-8974-378a42a43e9d",
  "resources": [
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "crosstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.dev-vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.prod-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "crosstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.prod-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.prod-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.prod-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.prod-vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.prod-vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.qa-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "crosstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.qa-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.qa-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.qa-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.qa-vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.qa-vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.sharedresources-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "crosstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.sharedresources-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.sharedresources-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.sharedresources-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.sharedresources-vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.sharedresources-vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.transit-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "crosstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.transit-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.transit-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.transit-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.transit-vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.transit-vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    }
  ]
}